# HRMS

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README_DEPLOYMENT.md  README_DESKTOP.md  README_HRMS_MODERN.md  README_UI_FRAMEWORKS.md  WARP.md  additional_features.py  alembic.ini  app.py  app_classic.py  app_flet.py  app_hrms_simple.py  app_minimal.py  app_nicegui.py  app_optimized.py  app_simple_test.py  auto_test_ui_options.py  build_exe.bat  check_database.py  clean_logs.py  cleanup.py  code_quality_check.py  config.py  debug_localhost_3000.py  docker-compose.yml  feature_checklist.py  feature_checklist_report.json  format_code.py  generate_test_data.py  hr_search.py  hrms_desktop.py  hrms_modern.py  hrms_pages_modern.py  (+42 more)
alembic/: env.py
apps/: launcher.py  run_classic.py  run_nicegui.py
backend/: .env.example  Dockerfile  requirements.txt
data/: hrms.db  test_mailer_0e45e90e25c64bbeb0595f8cfa8da90c.db  test_mailer_360dd85f348e4df998ac7d6225478d6c.db  test_mailer_c311b8e46c0241eebb2a8ca702df9349.db
frontend/: Dockerfile  package.json
hrms/: __init__.py  __main__.py  app.py  appointment.py  audit.py  config.py  contracts.py  db.py  docx_exports.py  excel_utils.py  importer.py  init_db.py  insurance.py  mailer.py  models.py  person_detail.py  planning.py  reporting.py  retirement.py  salary.py  scheduler.py  security.py  seed.py  settings_service.py  templates.py  ui_forms.py
scripts/: create_templates.py
src/: __init__.py
templates/: base.html  cong_van_ra_soat_nang_luong.docx  contracts.html  (+13 more)
(+55 files in other folders)
