[project]
name = "hrms"
version = "0.1.0"
description = "Human Resource Management System (Python-only, desktop app)"
requires-python = ">=3.11"
authors = [{name = "HR Team"}]
readme = "README.md"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
